# ros2_architecture

./: LICENSE  Readme.md
nodes/emergency_stop_node/: CMakeLists.txt  node.cpp  package.xml
nodes/proximity_sensor_node/: CMakeLists.txt  node.cpp  package.xml
nodes/speed_control_node/: CMakeLists.txt  node.cpp  package.xml
